[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["Timur <x3m4ikc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
pydantic-settings = "^2.9.1"
dotenv = "^0.9.9"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
